# horizon

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  components.json  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs.rs  lib.rs  main.rs  process_tracker.rs  terminal.rs
src-tauri/src/lsp/: config.rs  logger.rs  mod.rs  protocol.rs  server_factory.rs  websocket.rs
src-tauri/src/lsp/servers/: mod.rs  rust.rs
src/components/: app-sidebar.tsx  audio-player.tsx  code-editor.tsx  create-dialog.tsx  image-viewer.tsx  rename-dialog.tsx  terminal.tsx  theme-provider.tsx
src/components/ui/: badge.tsx  breadcrumb.tsx  button.tsx  context-menu.tsx  dialog.tsx  file-selection-tabs.tsx  hover-tooltip.tsx  input.tsx  resizable.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx  tabs.tsx  tooltip.tsx
src/hooks/: use-theme.ts
src/lib/: audio-context.tsx  file-context.tsx  file-service.ts  lsp-store.ts  native-fs.ts  stores.ts
