[package]
name = "horizon"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "horizon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-dialog = "2.2.1"
uuid = { version = "1.16", features = ["v4"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
chrono = "0.4.40"
sysinfo = "0.30.0"
nix = "0.29.0"
libc = "0.2.172"
tauri-plugin-clipboard-manager = "2.2.2"

