[package]
name = "horizon"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "horizon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-dialog = "2.2.1"
uuid = { version = "1.16", features = ["v4"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
chrono = "0.4.40"
sysinfo = "0.30.0"
nix = "0.29.0"
libc = "0.2.172"
tauri-plugin-clipboard-manager = "2.2.2"
regex = "1.10.3"
lazy_static = "1.4.0"
grep-matcher = "0.1.7"
grep-regex = "0.1.12"
grep-searcher = "0.1.11"
globset = "0.4.14"
walkdir = "2.4.0"
tower-lsp = "0.20.0"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
dashmap = "6.1.0"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
parking_lot = "0.12.3"
lsp-types = "0.97.0"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
tokio-util = "0.7.10"
tokio-stream = { version = "0.1.15", features = ["net"] }
warp = "0.3.7"
jsonrpc-core = "18.0.0"
bytes = "1.10.1"
url = "2.5.4"
#r = "0.3"
